# sandbox

./: scoop.ps1
catch2-trial/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
catch2-trial/include/catch2trial/: util.hpp
catch2-trial/src/catch2trial/: util.cpp
catch2-trial/test/catch2trial/: util_test.cpp
chartjs-trial/: .gitignore  Makefile  docker-compose.yml  package-lock.json  package.json
chartjs-trial/src/: index.html  index.ts
clang-format/: .clang-format
consolez/: README.md  console.xml
cpp-index-checker/: .gitignore  CMakeLists.txt  Makefile
cpp-index-checker/src/headers/cic/: fibonacchi.hpp  sum.hpp
cpp-index-checker/src/sources/: main.cpp  sum.cpp
cpp-windows-build-checker/: CMakeLists.txt  Makefile
cpp-windows-build-checker-conan/: Makefile  conanfile.py  msvc2012_32bit.profile  msvc2015_32bit.profile  msvc2015_64bit.profile
cpp-windows-build-checker/src/: main.cpp
cytoscape-trial/: .gitignore  docker-compose.yml  index.html  index.scss  index.ts  package-lock.json  package.json
diagrams-trial/: .gitignore  Dockerfile  Makefile  diagram.py  docker-compose.yml  pyproject.toml
docsify-trial/: Makefile  docker-compose.yml  package-lock.json
docsify-trial/docs/: README.md  _sidebar.md  code_blocks.md  index.html  math.md  mermaid.md  sample.cpp
doctest-trial/: CMakeLists.txt  Dockerfile  Makefile
doctest-trial/include/doctesttrial/: util.hpp
doctest-trial/src/doctesttrial/: util.cpp
doctest-trial/test/doctesttrial/: util_test.cpp
gatsby-trial/: .eslintrc  .gitignore  Makefile  docker-compose.yml  gatsby-config.js  package-lock.json  package.json
gatsby-trial/src/pages/: index.tsx  md.md  md.tsx  mdx.mdx
gitgraph-js-trial/: Makefile  index.html  index.ts  package-lock.json  package.json
graphviz-trial/: sample.dot
grpc-trial/: .gitignore  CMakeLists.txt  Makefile  README.md  convex_hull_calculator_client.py  convex_hull_calculator_servicer.py  cpp.dockerfile  docker-compose.yml  main.cpp  plot.gnuplot  requirements.txt
grpc-trial/protos/: buf.yaml  calculator.proto
mermaid-trial/: legends.mmd
nextjs-trial/: package-lock.json  package.json  tailwind.config.ts
nextjs-trial/app/: page.tsx  server.tsx
nextjs-trial/components/: Canvas.tsx
protoc-gen-doc-trial/: Dockerfile  Makefile  README.md  docker-compose.yml
python-typing/: Dockerfile  Makefile  a.py
scoop/: .gitignore  Pipfile  install_vscode_extensions.py  provision.ps1  scoop.bat  scoop.md  scoop.ps1  vscode.bat  vscode.ps1
travis/: Dockerfile  Makefile  docker-compose.yml
typst-trial/: file.typ
